--- a/WebApiJsonNoMVC/Web.config
+++ b/WebApiJsonNoMVC/Web.config
@@ -50,4 +50,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="Model1" connectionString="data source=GREG-DOUD\SQLEXPRESS01;initial catalog=EducationContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
+<connectionStrings><add name="Education" connectionString="data source=GREG-DOUD\SQLEXPRESS01;initial catalog=EducationContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
